extends Node2D

func _on_tp1_pressed():
	get_tree().change_scene("res://lvl5.tscn")
func _on_tp2_pressed():
	get_tree().change_scene("res://lvl2.1.tscn")
func _on_tp3_pressed():
	get_tree().change_scene("res://lvl4.3.tscn")
func _on_tp4_pressed():
	get_tree().change_scene("res://lvl4.2.tscn")
func _on_tp5_pressed():
	get_tree().change_scene("res://lvl1.2.tscn")
